gts-macros/tests/compile_fail/traits_schema_string_literal.stderr
error: expected `inline(T)`, a type path, or `true`/`false`
  --> tests/compile_fail/traits_schema_string_literal.rs:14:21
   |
14 |     traits_schema = "P30D",
   |                     ^^^^^^

warning: unused import: `gts::GtsInstanceId`
 --> tests/compile_fail/traits_schema_string_literal.rs:5:5
  |
5 | use gts::GtsInstanceId;
  |     ^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
